<resources>
    <string name="app_name">Login Singup Demo</string>

    <string name="yourList">Your List</string>
    <string name="total_item">Total Item :</string>
    <string name="total">Total :</string>
    <string name="send_to_owner">Buy Now</string>
    <string name="mobile">Mobile</string>
    <string name="MobileCompelsory">Mobile *</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="account_create">Create new Account?</string>
    <string name="select_language">Select Language :</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="name">Name *</string>
    <string name="email_id">Email id</string>
    <string name="passwordCompelsory">Password *</string>
    <string name="sing_up">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="help">help</string>
    <string name="buy_more_save_more">BUY MORE SAVE MORE</string>
    <string name="checkout">Checkout</string>
    <string name="rsSing">₹</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_share">share</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="addressCo">Address *</string>
    <string name="wait">Wait</string>
    <string name="loading">Loading..</string>
    <string name="order_no">Order No.</string>
    <string name="items">Items</string>
    <string name="order_date">Order Time</string>
    <string name="comment">Comment</string>
    <string name="item_name">Item Name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="total2">Total</string>
    <string name="totalItem">Total Item : </string>
    <string name="totalRs">Total ₹ : </string>
    <string name="noInternet">No Internet</string>
    <string name="somethingWrong">Something Wrong.</string>
    <string name="haveYouCheck">Have you check ?</string>
    <string name="sendToOwner">Send this to owner ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_apps">My Apps</string>
    <string name="myOrders">My Orders</string>
    <string name="addNewOrder">Add New Order</string>
    <string name="last_order">Last Order</string>
    <string name="customerId">Customer Id: </string>
    <string name="user_name">User Name</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="noRecordFound">No Record Found</string>
    <string name="tenDigitMobile">Please Enter 10 Digits Mobile Number</string>
    <string name="sixDigitsPass">Please Enter Minimum 6 Digits Password</string>
    <string name="checkMobilePass">Check Mobile Number And Password</string>
    <string name="mobilePassForLogin">Enter Mobile Number And Password For Login</string>
    <string name="enterEmail">Enter Valid Email</string>
    <string name="required">Required</string>
    <string name="passRequired">Password Required</string>
    <string name="sixDigitPassReqed">Minimum 6 Digit Password Required</string>

    <string name="notInStoke">Not In Stoke</string>
    <string name="description">Description</string>
    <string name="productCategory">Product Category</string>
    <string name="newProductAdded">New Product Added</string>
    <string name="productPriceEmpty">Product Name And Price Are Empty.</string>
    <string name="productEditComplete">Product Edit Successfully</string>
    <string name="priceProductEmpty">Enter Price And Product Name.</string>
    <string name="newCategoryAdd">New Category Added</string>
    <string name="categoryEdit">Category Edit</string>
    <string name="customer_name">Customer Name</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="bill">Bill</string>
    <string name="all_product">All Product</string>
    <string name="anything_is_pending_or_any_comments">Anything is pending or any comments</string>
    <string name="delete">Deleted</string>
    <string name="bestQuality">100 % Best Quality</string>
    <string name="shopeAddress">39, Hingalaj Society,Near Kharwarnagar, Khatodara, Surat - 395002</string>
    <string name="shopMobile">+91 8000498391</string>
    <string name="orderDate">Order Date</string>
    <string name="product">Product</string>
    <string name="srNo">No</string>
    <string name="totalEqual">Total = </string>
    <string name="passChange">Password Change successfully</string>
    <string name="AreYouSure">Are you Sure?</string>
    <string name="deleteOrder">Delete All Complete Order?</string>
    <string name="completeOrdersDelete"><![CDATA[All Complete & Cancel Orders Are Deleted]]></string>
    <string name="product_details">Product Details</string>
    <string name="stock_details">Stock Details</string>
    <string name="price_details">Price Details</string>
    <string name="areYouSure">Are You Sure You Want To Delete?</string>
    <string name="productDeleted">Product Deleted</string>
    <string name="select_category">Select Category</string>
    <string name="category_discretion">Category Description</string>
    <string name="category">Category</string>
    <string name="discretion">Discretion</string>
    <string name="admin">Admin</string>
    <string name="adminSide">Admin Side</string>
    <string name="allOrders">All Orders</string>
    <string name="pendingOrders">Pending Orders</string>
    <string name="editOrders">Edit Orders</string>
    <string name="addProduct">Add Product</string>
    <string name="editProduct">Edit Product</string>
    <string name="addCategory">Add Category</string>
    <string name="customers">Customers</string>
    <string name="customer_mobile">"Customer Mobile Number : "</string>
    <string name="notRemoveAllPrice">You Can\'t remove All Price</string>
    <string name="AboutUs">About Us</string>
    <string name="about_developer">About Developer</string>
</resources>
